--- a/index.html
+++ b/index.html
@@ -48,5 +48,7 @@
             <h2>Heading of second group</h2>
             <p>This paragraph 2nd</p>
         </div>
+
+    <h1>New Paragraph for update</h1>
 </body>
 </html>
