--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
             <p>This paragraph 2nd</p>
         </div>
 
-    <h1>New Paragraph for update</h1>
+    <h1>New Paragraph</h1>
 </body>
 </html>
